--- a/CustomDataset.ipynb
+++ b/CustomDataset.ipynb
@@ -106,8 +106,8 @@
    "source": [
     "# WHOLE dataset --> train & test sets\n",
     "\n",
-    "path_to_train = 'E:\\\\parralelcomputed_trackdata\\\\Heatmaps_train_norm\\\\'\n",
-    "path_to_test = 'E:\\\\parralelcomputed_trackdata\\\\Heatmaps_test\\\\'\n",
+    "path_to_train = '...'\n",
+    "path_to_test = '...'\n",
     "ds_train = create_dataset(path_to_train, transforms=transforms.ToTensor())\n",
     "ds_test = create_dataset(path_to_test, transforms=transforms.ToTensor())\n",
     "whole_ds = torch.utils.data.ConcatDataset([ds_train, ds_test])\n",
